[package]
name = "pikit-graphql-server"
version = "0.1.0"
authors = ["davidwu <david6906817@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "15e9bff" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", rev = "15e9bff" }
postgres = { version = "0.17", features = ["with-uuid-0_8"] }
r2d2 = "0.8"
r2d2_postgres = "0.16"
uuid = { version = "0.8", features = ["serde", "v4"] }
clap = "2.33"
log = "0.4"
env_logger = "0.7"